[tool.poetry]
name = "simple-billingapi"
version = "0.1.0"
description = "Simple Billing API"
authors = ["Slava Bezborodov <slavabezborodov56@gmail.com>"]

[tool.poetry.scripts]
simple-billingapi = "simple_billingapi.cli:cli"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
